Restore Java 8 compatibility to DropWizards Metrics Module
* Replaced usages of `List.of` with `Collections.singletonList`

Other usages of List.of, Set.of, and Map.of are scattered throughout Resilience4j,
however the others are in test classes, so not necessarily a big deal.